# src/controllers/post.controller.ts
@@ -1,7 +1,8 @@
-import { IController } from "src/shared/interfaces";
+import { IController } from "../shared/interfaces";
 import { Router, Request, Response, NextFunction } from "express";
-import { PostService } from "src/services";
-import { authMiddleware } from "src/middlewares";
+import { PostService } from "../services";
+import { authMiddleware } from "../middlewares";
+import { validatePost } from "../request_validations";
 
 export class PostController implements IController {
 
@@ -15,6 +16,9 @@ export class PostController implements IController {
 
     initRoutes() {
         this.router.get("/", [authMiddleware], this.getWithPagination);
+        this.router.post("/", [authMiddleware, validatePost], this.create);
+        this.router.put("/:postId", [authMiddleware, validatePost], this.update);
+        this.router.delete("/:postId", [authMiddleware], this.delete);
     }
 
     getWithPagination = async (request: Request, response: Response, next: NextFunction) => {
@@ -23,6 +27,56 @@ export class PostController implements IController {
             const posts = await this.postService.getPosts(request.query, userId);
 
             response.json(posts);
+        } catch (error) {
+            next(error);
+        }
+    }
+
+    create = async (request: Request, response: Response, next: NextFunction) => {
+        try {
+            const { userId } = response.locals.User;
+            await this.postService.add(request.body, userId);
+
+            response.status(201).send();
+        } catch (error) {
+            next(error);
+        }
+    }
+
+    update = async (request: Request, response: Response, next: NextFunction) => {
+        try {
+            const { userId } = response.locals.User;
+            const post = await this.postService.getPostById(request.params.postId);
+
+            if (post === undefined || post === null) {
+                global.logger.log({
+                    level: "info",
+                    message: `Update Post - ${post.getDataValue('postId')} doesnt exists`
+                })
+                return response.status(404).send({ message: "Identifier not found" });
+            }
+
+            await this.postService.update(request.body, post.getDataValue("postId"), userId);
+            response.status(204).send();
+        } catch (error) {
+            next(error);
+        }
+    }
+
+    delete = async (request: Request, response: Response, next: NextFunction) => {
+        try {
+            const post = await this.postService.getPostById(request.params.postId);
+
+            if (post === undefined || post === null) {
+                global.logger.log({
+                    level: "info",
+                    message: `Delete Post - ${request.params.postId} doesnt exists`
+                })
+                return response.status(404).send({ message: "Identifier not found" });
+            }
+
+            await this.postService.delete(post.getDataValue("postId"));
+            response.status(204).send();
         } catch (error) {
             next(error);
         }
